@@ -1,3 +1,7 @@
+2014-10-07  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.cpp: 
+
 2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DBaseInterface.h:
