@@ -1,3 +1,8 @@
+2014-10-07  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Smash.x3dv:
+	* SpiderMonkey-Inline.x3dv: 
+
 2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Smash.x3dv: 
